# wasm-runner

./: .gitignore  Cargo.toml  README.md  Taskfile.yaml
crates/wasm-bin/: Cargo.toml
crates/wasm-bin/src/: decoder.rs  error.rs  instr.rs  lib.rs  section.rs  types.rs  values.rs
crates/wasm-bin/src/decoder/: error.rs  instr.rs  mod.rs  section.rs  types.rs  values.rs
crates/wasm-bin/src/run/: error.rs  mem.rs  mod.rs  stack.rs
crates/wasm-bin/src/wasm/: instr.rs  mod.rs
crates/wasm-bin/tests/decoding/: add.wasm  aes.wasm  box.wasm  floats.wasm  log.wasm  main.rs  simd.wasm
crates/wasm-text/: Cargo.toml
crates/wasm-text/src/: lib.rs  node.rs  parser.rs
crates/wasm-text/tests/parsing/: add.wat  aes.wat  box.wat  floats.wat  log.wat  main.rs  simd.wat
programs/: Cargo.toml
programs/add/: Cargo.toml
programs/box/: Cargo.toml
programs/box/src/: lib.rs
programs/examples/: add.rs  aes.rs  box.rs  floats.rs  hello.rs  log.rs  simd.rs
programs/hello/: Cargo.toml
programs/hello/src/: lib.rs
programs/log/: Cargo.toml
programs/log/src/: lib.rs
programs/src/: floats.rs  lib.rs  simd.rs
programs/src/aes/: cipher.rs  mod.rs  tests.rs
