[package]
name = "programs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[[example]]
name = "add"
crate-type = ["cdylib"]

[[example]]
name = "aes"
crate-type = ["cdylib"]

[[example]]
name = "box"
crate-type = ["cdylib"]

[[example]]
name = "hello"
crate-type = ["cdylib"]

[[example]]
name = "log"
crate-type = ["cdylib"]

