[package]
name = "programs"
version = "0.1.0"
edition = "2021"

[profile.wasm]
inherits = "release"
lto = "fat"
opt-level = "s"

[lib]
crate-type = ["rlib"]

[[example]]
name = "add"
crate-type = ["cdylib"]

[[example]]
name = "aes"
crate-type = ["cdylib"]

[[example]]
name = "box"
crate-type = ["cdylib"]

[[example]]
name = "floats"
crate-type = ["cdylib"]

[[example]]
name = "hello"
crate-type = ["cdylib"]

[[example]]
name = "log"
crate-type = ["cdylib"]

[[example]]
name = "simd"
crate-type = ["cdylib"]
